--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Persona</string>
+    <string name="app_name">Persona.</string>
+    <string name="title_text">Self. Gratitude. Journal</string>
+    <string name="grateful_text">What are you grateful for today?</string>
+    <string name="getStarted_text">GET STARTED</string>
 </resources>
